--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <!-- Header -->
     <header>
       <div class="header-content">
         <h1><span class="accent">Fran's</span> Flowers</h1>
@@ -15,6 +16,18 @@
       </div>
     </header>
 
+    <!-- Navigation Bar -->
+    <nav>
+      <a href="#" class="logo">Fran's Flowers</a>
+      <ul>
+        <li><a href="#about-us">About</a></li>
+        <li><a href="#specials">Specials</a></li>
+        <li><a href="#visit-us">Visit Us</a></li>
+        <li><a href="#testimonials">Testimonials</a></li>
+      </ul>
+    </nav>
+
+    <!-- Hero Section -->
     <div id="hero-container">
       <img
         src="img/fran.png"
@@ -23,8 +36,10 @@
       />
     </div>
 
+    <!-- Main Content -->
     <main>
-      <section class="about-us">
+      <!-- About Us Section -->
+      <section class="about-us" id="about-us">
         <h2><span class="accent">About</span> Us</h2>
         <p>
           Fran's Flowers was founded in 1995 by Francine Miller to share joy,
@@ -37,7 +52,8 @@
         <p>Thank you for helping us grow kindness one flower at a time.</p>
       </section>
 
-      <section class="specials">
+      <!-- Specials Section -->
+      <section class="specials" id="specials">
         <h2><span class="accent">Weekly</span> Specials</h2>
         <div class="specials-list">
           <article class="special-offer">
@@ -63,7 +79,25 @@
         </div>
       </section>
 
-      <section class="visit-us">
+      <!-- Testimonials Section -->
+      <section id="testimonials">
+        <h2><span class="accent">Customer</span> Testimonials</h2>
+
+        <div class="testimonial">
+          <p>"I always order from Fran's for birthdays and anniversaries. The flowers
+             are fresh, vibrant, and beautifully arranged. Highly recommended!"</p>
+          <p class="customer-name">– Emily R.</p>
+        </div>
+
+        <div class="testimonial">
+          <p>"Fran's Flowers never fails to brighten my day. Their service is excellent
+             and the bouquets always last long. Truly a gem in San Francisco."</p>
+          <p class="customer-name">– Marcus T.</p>
+        </div>
+      </section>
+
+      <!-- Visit Us Section -->
+      <section class="visit-us" id="visit-us">
         <h2><span class="accent">Visit</span> Us</h2>
         <div class="contact-info">
           <p>Come in and say hi!</p>
@@ -75,16 +109,21 @@
           </div>
         </div>
         <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.144965296929!2d-122.4230293!3d37.7689366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f7e3a37128e21%3A0xf85bfc7fef295b98!2s123%20Valencia%20St%2C%20San%20Francisco%2C%20CA%2094103!5e0!3m2!1sen!2sus!4v1722345678901!5m2!1sen!2sus"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.30005786482!2d-122.4221764846814!3d37.7610629797672!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085b9a764722527%3A0x67e89133887c9c05!2s123%20Valencia%20St%2C%20San%20Francisco%2C%20CA%2094103%2C%20USA!5e0!3m2!1sen!2sin!4v1638361719584!5m2!1sen!2sin"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
           loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"
         ></iframe>
       </section>
     </main>
 
+    <!-- Footer -->
     <footer>
       <div class="footer-content">
-        <p>&copy; 2025 Fran's Flowers LLC.</p>
+        <p>© 2025 Fran's Flowers LLC.</p>
         <p>Brightening lives one flower at a time</p>
       </div>
     </footer>
